# onchain-handler/docs/swagger.json
@@ -129,7 +129,7 @@
         },
         "/api/v1/payment-orders": {
             "get": {
-                "description": "This endpoint retrieves payment order histories based on optional status filter.",
+                "description": "This endpoint retrieves payment orders based on optional status filter.",
                 "consumes": [
                     "application/json"
                 ],
@@ -139,7 +139,7 @@
                 "tags": [
                     "payment-order"
                 ],
-                "summary": "Retrieve payment order histories",
+                "summary": "Retrieve payment orders",
                 "parameters": [
                     {
                         "type": "integer",
@@ -635,6 +635,9 @@
                     "items": {
                         "$ref": "#/definitions/dto.PaymentHistoryDTO"
                     }
+                },
+                "expired": {
+                    "type": "integer"
                 },
                 "id": {
                     "type": "integer"
